# mcpfuzz

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: installation.md  modules.md  plugin_dev_guide.md  quickstart.md  understanding-output.md
scripts/: mcpfuzz-docker-batch1.sh  mcpfuzz-docker-batch2.sh  mcpfuzz-wave1.sh
src/mcpfuzz/: __init__.py  cli.py  models.py  poc_generator.py
src/mcpfuzz/engine/: __init__.py  scanner.py
src/mcpfuzz/modules/: __init__.py  auth_bypass.py  base.py  command_injection.py  cve_checks.py  dns_rebinding.py  hardcoded_secrets.py  idor_bola.py  path_traversal.py  protocol_fuzzing.py  rug_pull.py  sql_injection.py  ssrf.py  tool_poisoning.py
src/mcpfuzz/reporting/: __init__.py  json_reporter.py
src/mcpfuzz/transport/: __init__.py  base.py  sse.py  stdio.py  streamable_http.py
src/mcpfuzz/utils/: __init__.py  callback_server.py  llm_client.py  sast_scanner.py
